samples/_failures_safe/1761691243_7c6f01_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_3713a3fa.c: In function ‘main’:
./samples/SAFE/__tmp_3713a3fa.c:172:9: error: expected expression at end of input
  172 |         return
      |         ^~~~~~
./samples/SAFE/__tmp_3713a3fa.c:172:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_3713a3fa.c:172:9: error: expected declaration or statement at end of input
